...
                            android:fontFamily="@font/avenir"
                            android:text="@string/group_title"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/editTextGroupName"
                            android:layout_width="270dp"
                            android:layout_height="match_parent"
                            android:layout_below="@+id/textHeaderMail"
                            android:layout_marginLeft="15dp"
                            android:layout_toRightOf="@+id/GroupPicture_ImageView"
                            android:fontFamily="@font/avenir"
...
                </LinearLayout>

            </RelativeLayout>

            <LinearLayout

                android:id="@+id/linearLayoutSelectionButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/rgroupButton2"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingHorizontal="50dp">

...
                        android:fontFamily="@font/avenir"
                        android:gravity="center"
                        android:text="@string/home"
                        android:textColor="@color/white" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rbuttonWear"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:background="@drawable/radio_button_selector"
                        android:button="@android:color/transparent"
                        android:elevation="5dp"
...
                                        android:padding="5dp"
                                        android:src="@drawable/addgroups_addfriendicon"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent" />

                                    <TextView
                                        android:id="@+id/textViewName"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_toRightOf="@+id/cardView_addgroupsPicture"
                                        android:fontFamily="@font/avenir"
                                        android:gravity="center"
...
                android:layout_gravity="center"
                android:paddingHorizontal="8dp"
                tools:listitem="@layout/item_addgroups_person" />


            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/buttonMakeGroup"
                    android:layout_width="310dp"
                    android:layout_height="34dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/button_smooth_corner"
...
                    android:text="@string/create_group"
                    android:textColor="@color/grey"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttonSaveGroup"
                    android:layout_width="310dp"
                    android:layout_height="34dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/button_smooth_corner"
...
